k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-azure
  namespace: grupo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-azure
  template:
    metadata:
      labels:
        app: api-azure
    spec:
      containers:
        - name: api-azure
          image: acrgrupo1.azurecr.io/api-azure:latest
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: acr-secret
