k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projeto5-cloud-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projeto5-cloud
  template:
    metadata:
      labels:
        app: projeto5-cloud
    spec:
      containers:
        - name: projeto5-container
          image: projeto5-cloud:latest  # Atualiza com a imagem real (ex: do DockerHub)
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
