k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projeto5-cloud-service
spec:
  selector:
    app: projeto5-cloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
